tests/sumo/extended/calibrator/errors/vClass_mismatch_ignore/errors.sumo.meso
Warning: Vehicle 'cali.0.0' is not allowed to depart on any lane of edge 'beg2'.
Warning: Vehicle 'cali.0.0' is not allowed to depart on any lane of edge 'beg2'.
Warning: Vehicle 'cali.0.2' is not allowed to depart on any lane of edge 'beg2'.
Warning: Vehicle 'cali.0.3' is not allowed to depart on any lane of edge 'beg2'.
